refactor: address code review feedback for EdDSA support
- Fix dead code: replace "OKP" check with "EdDSA" in isAlgorithmCompatible()
  since KeyInfo stores JWS algorithm values, not key types
- Eliminate code duplication in JwkKey by reusing decodeBase64UrlToBytes()
  as shared helper for decodeBase64UrlToBigInteger()
- Use String.isBlank() instead of trim().isEmpty()
- Remove redundant catch(InvalidKeySpecException) re-throw in parseOkpKey()
- Extract createOkpJwkObject() helper in test infrastructure to eliminate
  duplicated EdDSA JWK creation logic

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>